[package]
name = "adder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 由于 Cargo 不会主动去假设工作空间中的包会彼此依赖，所以我们必须要显式地指明包与包之间的依赖关系
add_one = { path = '../add_one' }
add_two = { path = '../add_two' }
add_three = { path = '../add_three' }
rand='0.3.14'
